# ros2_JOUR2

./: README.md
mon_modele_urdf/my_first_robot/: CMakeLists.txt
mon_modele_urdf/my_first_robot/config/: my_first_robot.rviz
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/exercices_manipulation/share/ament_index/resource_index/package_run_dependencies/: exercices_manipulation
ros2_ws/install/exercices_manipulation/share/exercices_manipulation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/exercices_manipulation/share/exercices_manipulation/config/: moveit_cpp.yaml
ros2_ws/install/exercices_manipulation/share/exercices_manipulation/launch/: exercise_05.launch.py  exercise_07.launch.py
ros2_ws/install/my_first_robot/share/ament_index/resource_index/parent_prefix_path/: my_first_robot
ros2_ws/install/my_first_robot/share/my_first_robot/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/my_first_robot/share/my_first_robot/urdf/: my_first_robot_pauline.urdf
ros2_ws/log/: latest_build
ros2_ws/src/exercices/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/exercices/config/: moveit.rviz
ros2_ws/src/exercices/launch/: exercise_01.launch.py  exercise_03.launch.py  exercise_04.launch.py  exercise_06.launch.py  exercise_08.launch.py  exercise_09.launch.py
ros2_ws/src/exercices/src/: exercise_03_joint_space_motion.cpp  exercise_04_cartesian_line.cpp  exercise_05_cartesian_circle.cpp  exercise_06_add_obstacles.cpp  exercise_07_create_graspable_object.cpp  exercise_08_pick_and_place.cpp  exercise_09_constrained_motion.cpp
ros2_ws/src/my_first_robot/: CMakeLists.txt
ros2_ws/src/my_first_robot/config/: my_first_robot_controllers.yaml
ros2_ws/src/my_first_robot/launch/: 01_2r_robot.launch.py
ros2_ws/src/my_first_robot/src/: robot_commander.cpp
ros2_ws/src/my_first_robot/urdf/: my_first_robot.urdf
